# oddments

./: LICENSE  README.md  pyproject.toml
oddments/: __init__.py  decorators.py  utils.py
oddments/frame/: __init__.py  _constants.py  decorators.py  utils.py
oddments/frame/_pandas/: __init__.py  combine.py  decorators.py  dropna.py  dupes.py  utils.py
oddments/frame/_pandas/coercion/: __init__.py  decorators.py  utils.py
oddments/frame/_pandas/indexing/: utils.py  validation.py
oddments/frame/_polars/: __init__.py  conversion.py  utils.py
oddments/iteration/: utils.py
oddments/mixins/: __init__.py  repr_mixin.py
oddments/natural/: __init__.py  joining.py
oddments/pandas/: __init__.py  combine.py  decorators.py  dropna.py  dupes.py  utils.py
oddments/pandas/coercion/: __init__.py  decorators.py  utils.py
oddments/pandas/indexing/: __init__.py  utils.py  validation.py
oddments/sorting/: __init__.py  natural.py
oddments/text/: __init__.py  utils.py
oddments/validation/: __init__.py  decorators.py  utils.py
