[tool.poetry]
name = "oddments"
version = "0.3.1"
description = "Collection of general-purpose utilities."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/oddments"
homepage = "https://github.com/zteinck/oddments"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"