[tool.poetry]
name = "oddments"
version = "0.9.0"
description = "Collection of general-purpose utilities."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/oddments"
homepage = "https://github.com/zteinck/oddments"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
polars = "*"
pyarrow = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"