[project]
name = "oddments"
version = "0.9.1"
description = "Collection of general-purpose utilities."
authors = [
    { name = "Zachary Einck", email = "zacharyeinck@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[project.urls]
repository = "https://github.com/zteinck/oddments"
homepage = "https://github.com/zteinck/oddments"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"